tests/neg/i16072.scala

// scalac: -Werror

object Offside_:        // error
  def f = 42            // error

object `Underscore_`:
  def g = 42

class C_:               // error
  def c = 42            // error

class D_:               // error

  def d = 42            // error
