tests/neg/i16072.check
-- Error: tests/neg/i16072.scala:4:32 ----------------------------------------------------------------------------------
4 |object Offside_:        // error
  |                                ^
  |                                name ends in `:` before indented line
-- Error: tests/neg/i16072.scala:5:2 -----------------------------------------------------------------------------------
5 |  def f = 42            // error
  |  ^
  |  Line is indented too far to the right, or a `{` or `:` is missing
-- Error: tests/neg/i16072.scala:10:32 ---------------------------------------------------------------------------------
10 |class C_:               // error
   |                                ^
   |                                name ends in `:` before indented line
-- Error: tests/neg/i16072.scala:11:2 ----------------------------------------------------------------------------------
11 |  def c = 42            // error
   |  ^
   |  Line is indented too far to the right, or a `{` or `:` is missing
